--- a/data_table.Rmd
+++ b/data_table.Rmd
@@ -96,8 +96,7 @@ head(rd_dg[ , list(chr, start, end, strand)])
 ## Adding new columns
 ```{r}
 ## old data.frame syntax -- add a locus/location column for the junction data:
-
-rd_dg$loc = paste0(rd_dg$chr, ':', rd_dg$start, '-', rd_dg$end,  '(',rd_dg$strand,')' )
+rd_dg$loc <- paste0(rd_dg$chr, ':', rd_dg$start, '-', rd_dg$end,  '(',rd_dg$strand,')' )
 
 ## data.table syntax is again easier as column names are directly recognized
 rd_dg[, loc:=NULL] # let's delete this column in-place
